worked on the products page

--- a/products/index.html
+++ b/products/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 	<title>CRM, Invoicing, Small Business Management | Breeasy.com</title>
 	<meta name="description" content="Breeasy apps are designed by a small business for small business.  Increase your productivity, sales and cash mangement.">
@@ -44,26 +43,44 @@
 			</div>
 			<div class="breadcrumbs"><a href="#" >Breeasy.com</a> > Products</div>
 		</div> <!-- hd -->
-		
 		<div id='bd'>
 			<div class="yui-g">
 	    		<div class="yui-u first">
 	    			<h1>Breeasy for Business</h1>
+	    			<p>Breeasy for Business - BFB - is our flagship app that keeps you organized, efficient and productive.  Simple and easy to use, from the first day, you will notice the improvements in your day-to-day work flow.  Some things it can do are:</p>
+	    			<ul class="features">
+	    			<li>Manage Customers and Suppliers</li>
+	    			<li>CRM - Customer Relationship Management</li>
+	    			<li>CSI - Customer Service Incidents</li>
+	    			<li>Create To Do Lists</li>
+	    			<li>Create and Assign Tasks</li>
+	    			<li>Create and View Events with Calendars</li>
+	    			<li>Manage Employees, Consultants</li>
+	    			<li>Project Management</li>
+	    			<li>Reminders - To Dos, Tasks, Events</li>
+	    			<li>Reporting</li>
+	    			<li>And More....<li>
+					</ul>
+					<p>See a complete list of BFB features and how each one can <a href="#">save you time and money</a>.<br>  Of course, sometime the best way to learn a new app is to give it try with our <a href="#">Risk-Free Trial</a>.</p>
 				</div>
 	    		<div class="yui-u">
-	    			<h1>Breeasy Billing Center</h1>				
+	    			<h1>Breeasy Billing Center</h1>
+	    			<p>Sometimes, you just need to get an invoice or a bill to one one your clients, without any hassle.  That's where The Breeasy Billing Center can help.  Cloud based, free, and super simple, you can create invoices, record payments and keep track of your cash.</p>
+	    			<ul class="features">
+	    			<li>Create and Email Invoices on the Fly</li>
+	    			<li>Manage Accounts Receivables</li>
+	    			<li>Accounts Receivable Aging</li>
+	    			<li>Past Due Reports</li>
+					</ul>
+					<p>Not ready for all that Breeasy for Business can do for you?  The Breeasy Billing Center is a great way to give us a try <a href="#">Free, Forever</a>.<br>   You can read more about <a href="#">Invoicing, Billing and Cash Management</a>.</p>
+		
 	    		</div>
 			</div>
 			<br>
-			<div id='ft'>
-				<div id='goodbye'>copyright &copy; 2011 - 2012 Breeasy.com</div>
-    		</div>
-
-	    
+				<div id='ft' class="center">
+					<p id='goodbye'>copyright &copy; 2011 - 2012 Breeasy.com</p>
+    			</div>
 	    </div>
-	
-	
-	</div>
-			   
+	</div>   
 </body>
 </html>
