working on all the pages and adding internal linking

--- a/products/index.html
+++ b/products/index.html
@@ -3,19 +3,17 @@
 	<head>
 	<title>CRM, Invoicing, Small Business Management | Breeasy.com</title>
 	<meta name="description" content="Breeasy apps are designed by a small business for small business.  Increase your productivity, sales and cash mangement.">
-	
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../css/breeasy.css">
 	</head>
-	
 	<body>
     <div id="doc2"class="yui-t7">
     	<div id="app_header">
     	<a href="http://www.breeasy.com"><img src="../images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
-    	 	<a href="#">Free Trial Now Available</a><br>
-    	 	<a href="#">Earn $ with Breeasy</a>
+    	 	<a href="#">Bill Clients Free</a><br>
+    	 	<a href="#">Affiliates Earn Commissions Now</a>
 
     		</div>
     	</div>
@@ -23,19 +21,16 @@
 		    <div id='navigation'>
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
-					<li><a href="products.html">Products</a></li>
-					<li><a href="products.html">Plans and Pricing</a></li>
+					<li><a href="index.html">Products</a></li>
+					<li><a href="../plans/index.html">Plans and Pricing</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
-					<li><a href="products.html">Articles</a></li>
-					<li><a href="products.html">Opportunities</a></li>
-					<li><a href="products.html">About Breeasy</a></li>
-					<li><a href="products.html">Contact Us</a></li>
-					<li><a href="products.html">Support Forum</a></li>
-
-					
+					<li><a href="../articles/index.html">Articles</a></li>
+					<li><a href="../opportunities/index.html">Opportunities</a></li>
+					<li><a href="../about.html">About Breeasy</a></li>
+					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
-					<li class="last"><a href="feed://brze.me/feed/"><img src="../images/feed-24x24.png" alt="rss" width="24" height="24" /></a>
+					<li class="last"><a href="feed://brze.me/feed/"><img src="../images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
 </li>
 </li>
 				</ul>
@@ -47,7 +42,7 @@
 			<div class="yui-g">
 	    		<div class="yui-u first">
 	    			<h1>Breeasy for Business</h1>
-	    			<p>Breeasy for Business - BFB - is our flagship app that keeps you organized, efficient and productive.  Simple and easy to use, from the first day, you will notice the improvements in your day-to-day work flow.  Some things it can do are:</p>
+	    			<p><a href="breeasy-for-business/index.html">Breeasy for Business</a> - BFB - is our flagship app that keeps you organized, efficient and productive.  Simple and easy to use, from the first day, you will notice the improvements in your day-to-day work flow.  Some things it can do are:</p>
 	    			<ul class="features">
 	    			<li>Manage Customers and Suppliers</li>
 	    			<li>CRM - Customer Relationship Management</li>
@@ -59,20 +54,20 @@
 	    			<li>Project Management</li>
 	    			<li>Reminders - To Dos, Tasks, Events</li>
 	    			<li>Reporting</li>
-	    			<li>And More....<li>
+	    			<li>And More....</li>
 					</ul>
-					<p>See a complete list of BFB features and how each one can <a href="#">save you time and money</a>.<br>  Of course, sometime the best way to learn a new app is to give it try with our <a href="#">Risk-Free Trial</a>.</p>
+					<p>See a complete list of BFB features and how each one can <a href="breeasy-for-business/index.html">save you time and money</a>.<br>  Of course, sometime the best way to learn a new app is to give it try with our <a href="http://app.breeasy.com/signup">Risk-Free Trial</a>.</p>
 				</div>
 	    		<div class="yui-u">
 	    			<h1>Breeasy Billing Center</h1>
-	    			<p>Sometimes, you just need to get an invoice or a bill to one one your clients, without any hassle.  That's where The Breeasy Billing Center can help.  Cloud based, free, and super simple, you can create invoices, record payments and keep track of your cash.</p>
+	    			<p>Sometimes, you just need to get an invoice or a bill immediately to your client, without any hassle.  That's where <a href="breeasy-billing-center/index.html">The Breeasy Billing Center</a> can help.  Cloud based, free, and super simple, you can create invoices, record payments and keep track of your cash.</p>
 	    			<ul class="features">
 	    			<li>Create and Email Invoices on the Fly</li>
 	    			<li>Manage Accounts Receivables</li>
 	    			<li>Accounts Receivable Aging</li>
 	    			<li>Past Due Reports</li>
 					</ul>
-					<p>Not ready for all that Breeasy for Business can do for you?  The Breeasy Billing Center is a great way to give us a try <a href="#">Free, Forever</a>.<br>   You can read more about <a href="#">Invoicing, Billing and Cash Management</a>.</p>
+					<p>Not ready for all that Breeasy for Business can do for you?  The Breeasy Billing Center is a great way to give us a try <a href="http://billing.breeasy.com">Free, Forever</a>.<br>   You can read more about <a href="breeasy-billing-center/index.html">Invoicing, Billing and Cash Management</a>.</p>
 		
 	    		</div>
 			</div>
