--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 	<title>Productivity apps that help small business manage people, cash and time. | Breeasy.com</title>
 	<meta name="description" content="Secure, Social, and Simple, Breeasy is a small business management platform that provides apps and products that improve your productivity and save you time and money.">
@@ -17,7 +16,7 @@
     	<a href="http://www.breeasy.com"><img src="images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
     	 	<a href="http://app.breeasy.com/signup">Free Trial Now Available</a><br>
-    	 	<a href="#">Earn $ with Breeasy</a>
+    	 	<a href="#">Earn Commissions with Breeasy</a>
 
     		</div>
     	</div>
@@ -26,18 +25,17 @@
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
 					<li><a href="products/index.html">Products</a></li>
-					<li><a href="products.html">Plans and Pricing</a></li>
+					<li><a href="plans/index.html">Plans and Pricing</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
-					<li><a href="products.html">Articles</a></li>
-					<li><a href="products.html">Opportunities</a></li>
-					<li><a href="products.html">About Breeasy</a></li>
-					<li><a href="products.html">Contact Us</a></li>
-					<li><a href="products.html">Support Forum</a></li>
+					<li><a href="articles/index.html">Articles</a></li>
+					<li><a href="opportunities/index.html">Opportunities</a></li>
+					<li><a href="about.html">About Breeasy</a></li>
+					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
 
 					
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
-					<li class="last"><a href="feed://brze.me/feed/"><img src="images/feed-24x24.png" alt="rss" width="24" height="24" /></a>
+					<li class="last"><a href="feed://brze.me/feed/"><img src="images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
 </li>
 </li>
 				</ul>
@@ -48,7 +46,7 @@
 			<div class="yui-gd">
 	    		<div class="yui-u first">
 				<h1 id='first_col'>Save Time and Money</h1>
-				<p>Breeasy is a small business management platform that helps you run your business, keep your customers and suppliers happy, helps you manage your cash, both receivables and payments.  Our first applications, <a href="#">Breeasy for Business</a> and <a href="#">The Breeasy Billing Center</a>, are designed, priced and supported specifically for small and home based businesses.
+				<p>Breeasy is a small business management platform that helps you run your business, keep your customers and suppliers happy, helps you manage your cash, both receivables and payments.  Our first applications, <a href="products/breeasy-for-business/index.html">Breeasy for Business</a> and <a href="products/breeasy-billing-center/index.html">The Breeasy Billing Center</a>, are designed, priced and supported specifically for small business.
 				</p>
 				<ul class="features">
 					<li>Manage Clients, Suppliers, Customers, and Employees</li>
@@ -66,12 +64,12 @@
 		        <div class="yui-u first">
 		        <h2 class='section_header' id='first_col'>Simple, Social, Secure</h2>
 		        <p id="first_col">Breeasy.com is the next generation suite of cloud based apps for managing your contacts, cash, employees, customers and suppliers.<br>
-		        Designed for small and home-based businesses by an experienced and successful entrepunuer,  Breeasy is featured-packed, inexpensive, and community driven.  It's been created for you, by someone just like you - not a bunch of middle managers at a multi-billion dollar corporation that have never been in your shoes.</p>
+		        Designed for small and home-based businesses by an <a href="about.html">experienced and successful entrepreneur</a>,  Breeasy is featured-packed, inexpensive, and community driven.  It's been created for you, by someone just like you - not a bunch of middle managers at a multi-billion dollar corporation that have never been in your shoes.</p>
 		       </div>
 
 		        <div class="yui-u">
 		       <h2 class='section_header' id='first_col'>It's Easy with Breeasy</h2>
-				<p id="first_col">As a small business owner, you know how busy your day can be.  We know too, we do it every day.  Breeasy helps us get control of the mountain of emails, calls, prospecting, billing, notes, and appointments.  Everything is now in one place, organized and trackable. And Breeasy can help you, too.  Take a look at our apps, and we invite you to give them a try and let us know what you think.</p>
+				<p id="first_col">As a small business owner, you know how busy your day can be.  We know too, we do it every day.  Breeasy helps us get control of the mountain of emails, calls, prospecting, billing, notes, and appointments.  Everything is now in one place, organized and trackable. And Breeasy can help you, too.  <a href="products/index.html">Take a look at our apps</a>, and we invite you to give them a try and let us know what you think.</p>
 				<a href="#">Invoicing and Billing</a> | <a href="#">Contacts, Calendars, Tasks</a>
 				</div>
 				<div class="yui-u">
