typos and improvements

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 				<h2>Contact Us</h2>
 				Got a question or some interest in Breeasy.com opportunities? Drop us a line and ask us:  <a href="http://contact-breeasy.heroku.com">How can we help?</a>.
 				<h2>The Breeasy Blog</h2>
-				Keep up with the latest on Breeasy apps, tips and tricks, trends in small business and user stories on <a href="http://.brze.me">The Breeasy Blog</a>.
+				Keep up with the latest on Breeasy apps, tips and tricks, trends in small business and user stories on <a href="http://www.brze.me">The Breeasy Blog</a>.
 				<h2>Follow us on Twitter</h2>
 				<a href="http://twitter.com/easybreeasy" class="twitter-follow-button" data-show-count="false">
 				
