--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>Billing, Cash Management, Free Invoice Software | Breeasy.com</title>
-	<meta name="description" content="Breeasy apps are designed by a small business for small business.  Increase your productivity, sales and cash mangement.">
+	<meta name="description" content="The Breeasy Billing Center is a free app that helps small business get on top of their invoicing and collections.">
 	<link rel="stylesheet" type="text/css" href="../../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../../css/breeasy.css">
