--- a/products/breeasy-for-business/index.html
+++ b/products/breeasy-for-business/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>CRM, Productivity, Small Business Management, Breeasy for Business | Breeasy.com</title>
-	<meta name="description" content="Breeasy for Business helps you manage your small business  Give it a try risk free - no cc needed.">
+	<meta name="description" content="Breeasy for Business helps you manage your contacts and small business.  Give it a try risk free - no cc needed.">
 	<link rel="stylesheet" type="text/css" href="../../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../../css/breeasy.css">
