--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -73,7 +73,7 @@
 		        <li>Earn up to 20% of cash revenues.</li>
 		        </ul>
 		        <h2 class='section_header'>White Label Sales Manager</h2>
-		        <p>Breeasy is also looking for an experienced sales professional to sell its white label product and services. This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to introduce and sell breeasy white label  to customers interested in our innovative, value-add, opportunity. </p>
+		        <p>Breeasy is also looking for an experienced sales professional to sell/license its white label product and services. This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to introduce and license breeasy white label to customers interested in our innovative, value-added, opportunity.  Ideal customers are country and regional licensees, affinity organizations and successful internet retailers.</p>
 		         <ul class="list">
 		       	<li>Use existing contacts and networks</li>
 		        <li>Develop Sales and Marketing strategies</li>
