fixed typos etc.

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -72,7 +72,7 @@
 		        <li>Create and manage email campaigns.</li>
 		        <li>Earn up to 20% of cash revenues.</li>
 		        </ul>
-		        <h2 class='section_header'>White Label Sales Manager</h2>
+		        <h2 class='section_header'>White Label and Licensing Manager</h2>
 		        <p>Breeasy is also looking for an experienced sales professional to sell/license its white label product and services. This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to introduce and license breeasy white label to customers interested in our innovative, value-added, opportunity.  Ideal customers are country and regional licensees, affinity organizations and successful internet retailers.</p>
 		         <ul class="list">
 		       	<li>Use existing contacts and networks</li>
@@ -82,7 +82,7 @@
 		        </ul>
 		        <p>Interested?  Signup for a trial account, and email your resume/cv to tobrien@bootstraptechnology.com, indicating which position interests you.</p>
 		        
-			<h1>Parnter, Equity and Investment</h1>
+			<h1>Partner, Equity and Investment</h1>
 			<p>Breeasy <a href="http://www.breeasy.com">the small business management platform is growing</a> and we are looking for help.</p>
 			<h2>Partner Wanted</h2>
 			<a href="http://sandiego.craigslist.org/csd/bfs/3021133829.html">Social Business Platform Partner Needed</a>
