--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Productivity apps that help small business manage people, cash and time. | Breeasy.com</title>
-	<meta name="description" content="Secure, Social, and Simple, Breeasy is a small business management platform that provides apps and products that improve your productivity and save you time and money.">
+	<title> CRM, Time Management, Productivity, Small Business Management, GTD | Breeasy.com</title>
+	<meta name="description" content="Secure, social, and simple productivity apps that help small business manage people, cash and time.">
 	
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="css/base-min.css">
@@ -13,7 +13,7 @@
 	<body>
     <div id="doc2"class="yui-t7">
     	<div id="app_header">
-    	<a href="http://www.breeasy.com"><img src="images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
+    	<a href="http://www.breeasy.com"><img src="images/communicate_manage_grow.png" alt="small business management platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
     	 	<a href="http://app.breeasy.com/signup">Free Trial Now Available</a><br>
     	 	<a href="#">Earn Commissions with Breeasy</a>
@@ -46,13 +46,15 @@
 			<div class="yui-gd">
 	    		<div class="yui-u first">
 				<h1 id='first_col'>Save Time and Money</h1>
-				<p>Breeasy is a small business management platform that helps you run your business, keep your customers and suppliers happy, helps you manage your cash, both receivables and payments.  Our first applications, <a href="products/breeasy-for-business/index.html">Breeasy for Business</a> and <a href="products/breeasy-billing-center/index.html">The Breeasy Billing Center</a>, are designed, priced and supported specifically for small business.
+				<p>Breeasy.com is a small business management platform that helps you run your business, keep your customers and suppliers happy, and manage your accounts receivable and cash.  Our applications, <a href="products/breeasy-for-business/index.html">Breeasy for Business</a> and <a href="products/breeasy-billing-center/index.html">The Breeasy Billing Center</a>, are designed, priced, and supported by and for small business.
 				</p>
 				<ul class="features">
 					<li>Manage Clients, Suppliers, Customers, and Employees</li>
 					<li>Built for Small Business by a Small Business</li>
-					<li>Manage your Cash and Accounts Receivable</li>
-					<li>Get Organized and Increase Poductivity</li>
+					<li>Manage Cash and Accounts Receivable</li>
+					<li>Get Organized and Increase Productivity</li>
+					<li>Social CRM</li>
+					<li>Get Things Done</li>
 					<li>Community Driven</li>
 				</ul>
 		    	</div>
