--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -40,7 +40,7 @@
 			<div class="yui-gd">
 	    		<div class="yui-u first">
 	    		<h1>Get Paid Faster!</h1>
-	    		<p>As a small business owner, you know that cash is the fuel that makes your business hum.  But you don't always have time to create an invoice or bill your client and customers quickly, efficiently and accurately.  Now, with the <a href="http://billing.breeasy.com">Breeasy Billing Center</a>, you don't have to wait.  You can Create invoices, Record payments, Run reports, and Manage your most important asset:  Cash. Speaking of which, the Breeasy Billing Center is totally free!</p>
+	    		<p>As a small business owner, you know that cash is the fuel that makes your business hum.  But you don't always have time to create an invoice or bill your customers quickly, efficiently and accurately.  Now, with the <a href="http://billing.breeasy.com">Breeasy Billing Center</a>, you don't have to wait.  You can Create invoices, Record payments, Run reports, and Manage your most important asset:  Cash. Speaking of which, The Breeasy Billing Center is totally free!</p>
 	    		<p></p>
 	    		</div>
 	    		<div class="yui-u">
