--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Designed, Built and Managed by a Small Business for Small Business | Breeasy.com</title>
-	<meta name="description" content="Founded by a successful entrepunuer and small business owner, Breeasy is a small business platfrom and community.">
+	<title>Small Business Management Portal | Breeasy.com</title>
+	<meta name="description" content="Founded by a successful small business owner, Breeasy.com is a small business platform and community.">
 	
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="css/base-min.css">
@@ -53,7 +53,7 @@
 				<h2>FeedBack</h2>
 				Importantly, we want to hear your <a href="https://breeasy.desk.com">feedback and listen to your suggestions</a> in our forums.
 				<h2>Contact Us</h2>
-				Got a question or some interest in Breeasy.com opportunities? Drop us a line and ask us:  <a href="http://contact-breeasy.heroku.com">How can we help?</a>.
+				Got a question or some interest in Breeasy.com opportunities? Drop us a line and ask us:  <a href="http://contact.breeasy.com">How can we help?</a>.
 				<h2>The Breeasy Blog</h2>
 				Keep up with the latest on Breeasy apps, tips and tricks, trends in small business and user stories on <a href="http://www.brze.me">The Breeasy Blog</a>.
 				<h2>Follow us on Twitter</h2>
