--- a/plans/index.html
+++ b/plans/index.html
@@ -55,8 +55,8 @@
 						<tr><td>Storage (Files, Photos)</td><td>5GB</td><td>20GB</td></tr>
 						<tr><td>Messages, Calls, Notes</td><td>Unlimited</td><td>Unlimited</td></tr>
 						<tr><td>Breeasy Page</td><td>N/A</td><td>Included</td></tr>
-						<tr><td>Texts/SMS per month</td><td>50</td><td>200</td></tr>
 						<tr><td>Projects</td><td>5</td><td>Unlimited</td></tr>
+<!-- 						<tr><td>Texts/SMS per month</td><td>50</td><td>200</td></tr> -->
 						<tr><td>Priority Support*</td><td>N/A</td><td>Included</td></tr>
 						<tr><td>Monthly**</td><td>$9.95</td><td>$14.95</td></tr>
 						<tr><td>Annual**</td><td>$99.95</td><td>$149.95</td></tr>
