--- a/products/index.html
+++ b/products/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>CRM, Invoicing, Small Business Management | Breeasy.com</title>
+	<title>CRM, Invoicing, Small Business Management Portal | Breeasy.com</title>
 	<meta name="description" content="Breeasy apps are designed by a small business for small business.  Increase your productivity, sales and cash mangement.">
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../css/base-min.css">
