--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -42,27 +42,29 @@
 		<div id='bd'>
 			<div class="yui-g">
 			<h1>Opportunities at Breeasy.com</h1>
-			<h2 class='section_header'>Affiliate Program</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://app.breeasy.com/signup">Signup</a> for a Free Breeasy Trial Account, run it through its paces, then join the Breeasy Affiliate Program.  You can earn commissions of up to 30% on new paid subscribers and 15% on renewals.  Some conditions apply.</p>
 			
-		        <h2 class="section_header">Co-Marketing</h1><p>Have a complementary product or service or a large email list?  Looking for revenue opportunities?  We can put together a bespoke program that creates exciting revenue and cross-promotion opportunities.  Please contact us here:  <a href="http://contact-breeasy.heroku.com">contact form.</a> </p>
-		        <h2 class='section_header'>White/Private Label and Licensing</h2>
+			<h2 class='section_header'>Affiliate Program</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://app.breeasy.com/signup">Signup</a> for a Free Breeasy Trial Account, run it through its paces, then join the Breeasy Affiliate Program.  You can earn commissions of up to 30% on new paid subscribers and 15% on renewals.  Some conditions apply.</p>
+		
+		<h2 class='section_header'>White/Private Label and Licensing</h2>
 		<p>Looking to run your own web business?  Do you have or manage an existing business and are looking to add additional products and services that add value to your current offerings?  White Label Breeasy could be your answer.  </p>
 	        <ul class="features">
-	        <li>Unique Instance of Breeasy for Business (i.e. your_company.breeasy.com or yourdomain.com)</li>
+	        <li>Unique Instance of Breeasy for Business (i.e. your-company.breeasy.com or yourdomain.com)</li>
 	        <li>Tier 2 support</li>
 	        <li>Software and Server Maintenance Included - Turnkey opportunity</li>
-	        <li>Three ways to license Breeasy apps</li>
+	        <li>Three ways to license Breeasy.com apps</li>
 		        <ol class="sub_list">
 		        <li> Nominal upfront license fee, with ongoing revenue sharing</li>
 		        <li>Upfront license fee, annual license fee based on volume and monthly maintenance fee</li>
 		        <li>100% license arrangement - It's all yours to manage and support</li>
 		        </ol>
 	        </ul>
-	        <p>White-labeling Breeasy is a great opportunity to run a web-based business without having to be a developer or web expert.  You can be up and running in in as few as <em>two weeks</em>.  Regional exclusives available.  Contact us <a href="http://contact-breeasy.heroku.com">to start your breeasy license</a> or to discuss this opportunity.</p>
+	        <p>White-labeling Breeasy is a great opportunity to run a web-based business without having to be a developer or web expert.  You can be up and running in in as few as <em>two weeks</em>.  Regional exclusives available.  Contact us <a href="http://contact.breeasy.com">to start your breeasy license</a> or to discuss this opportunity.</p>
 
-		        
+			
+		        <h2 class="section_header">Co-Marketing</h1><p>Have a complementary product or service or a large email list?  Looking for revenue opportunities?  We can put together a bespoke program that creates exciting revenue and cross-promotion opportunities.  Please contact us <a href="http://contact.breeasy.com">for more information</a>. </p>
+	        
 		        <h1>Jobs and Consulting</h1>
-		  <h2 class='section_header'>Internet Marketing Specialist</h2>
+		  			<h2 class='section_header'>Internet Marketing Specialist</h2>
 		  <p>Breeasy is looking for a skilled marketing specialist to join our team.  This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to acquire trial and paid subscribers via social media marketing, SEO, SEM, blogging and email campaigns.
  </p>
 		        <ul class="list">
@@ -87,7 +89,7 @@
 			<h2>Partner Wanted</h2>
 			<a href="http://sandiego.craigslist.org/csd/bfs/3021133829.html">Social Business Platform Partner Needed</a>
 			<h2>Investment and Equity Available</h2>
-			<p>To help us fund our growth both in North America and internationally, an unique opportunity exists for investment in Breeasy.com.  Please contact <a href="../about.html">Tom O'Brien:</a>  tobrien@bootstraptechnology.com.</p>
+			<p>To help us fund our growth both in North America and internationally, a unique opportunity exists for investment in Breeasy.com.  Please contact <a href="../about.html">Tom O'Brien:</a>  tobrien@bootstraptechnology.com.</p>
 	    	</div>
 			<br>
 				<div id='ft' class="center">
