added absolute links to eveything except nav bar

--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="css/base-min.css">
-	<link rel="stylesheet" type="text/css" href="css/breeasy.css">
-	<link rel="canonical" href="http://www.breeasy.com" />	    
+	<link rel="stylesheet" type="text/css" href="css/breeasy.css">    
 	</head>
 	
 	<body>
@@ -16,7 +15,7 @@
     	<a href="http://www.breeasy.com"><img src="images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
     	 	
-    	 	<a href="#">Why not join our team?</a>
+    	 	<a href="http://www.breeasy.com/opportunities">Why not join our team?</a>
 
     		</div>
     	</div>
@@ -41,7 +40,7 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="#" >Breeasy.com</a> > About Breeasy</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > About Breeasy</div>
 		</div> <!-- hd -->
 		<div id="bd">
 		<div id="yui-main">
@@ -49,7 +48,7 @@
 				<div class="yui-g">
 				<h1>Small Business Focused</h1>
 				<p>Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien after years of research and development.  Tom is  founder and chief consultant at
-				BootStrap Technology Consulting.  Tired of CRM systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Global COO of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://bootstraptechnology.com/about.html">CV/Resume</a>.</p>
+				BootStrap Technology Consulting.  Tired of CRM systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Global COO of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://www.bootstraptechnology.com/about.html">CV/Resume</a>.</p>
 				<h2>FeedBack</h2>
 				Importantly, we want to hear your <a href="https://breeasy.desk.com">feedback and listen to your suggestions</a> in our forums.
 				<h2>Contact Us</h2>
