--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title> CRM, Time Management, Productivity, Small Business Management, GTD | Breeasy.com</title>
+	<title> CRM, Cash Management, Productivity, Small Business Management, GTD | Breeasy.com</title>
 	<meta name="description" content="Secure, social, and simple productivity apps that help small business manage people, cash and time.">
 	
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css">
@@ -16,7 +16,7 @@
     	<a href="http://www.breeasy.com"><img src="images/communicate_manage_grow.png" alt="small business management platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
     	 	<a href="http://app.breeasy.com/signup">Free Trial Now Available</a><br>
-    	 	<a href="#">Earn Commissions with Breeasy</a>
+    	 	<a href="http://www.breeasy.com/opportunities">Earn Commissions with Breeasy</a>
 
     		</div>
     	</div>
@@ -46,7 +46,7 @@
 			<div class="yui-gd">
 	    		<div class="yui-u first">
 				<h1 id='first_col'>Save Time and Money</h1>
-				<p>Breeasy.com is a small business management platform that helps you run your business, keep your customers and suppliers happy, and manage your accounts receivable and cash.  Our applications, <a href="products/breeasy-for-business/index.html">Breeasy for Business</a> and <a href="products/breeasy-billing-center/index.html">The Breeasy Billing Center</a>, are designed, priced, and supported by and for small business.
+				<p>Breeasy.com is a small business management platform that helps you run your business, keep your customers and suppliers happy, and manage your accounts receivable and cash.  Our applications, <a href="http://www.breeasy.com/products/breeasy-for-business">Breeasy for Business</a> and <a href="http://www.breeasy.com/products/breeasy-billing-center">The Breeasy Billing Center</a>, are designed, priced, and supported by and for small business.
 				</p>
 				<ul class="features">
 					<li>Manage Clients, Suppliers, Customers, and Employees</li>
@@ -66,13 +66,13 @@
 		        <div class="yui-u first">
 		        <h2 class='section_header' id='first_col'>Simple, Social, Secure</h2>
 		        <p id="first_col">Breeasy.com is the next generation suite of cloud based apps for managing your contacts, cash, employees, customers and suppliers.<br>
-		        Designed for small and home-based businesses by an <a href="about.html">experienced and successful entrepreneur</a>,  Breeasy is featured-packed, inexpensive, and community driven.  It's been created for you, by someone just like you - not a bunch of middle managers at a multi-billion dollar corporation that have never been in your shoes.</p>
+		        Designed for small and home-based businesses by an <a href="http://www.breeasy.com/about.html">experienced and successful entrepreneur</a>,  Breeasy is featured-packed, inexpensive, and community driven.  It's been created for you, by someone just like you - not a bunch of middle managers at a multi-billion dollar corporation that have never been in your shoes.</p>
 		       </div>
 
 		        <div class="yui-u">
 		       <h2 class='section_header' id='first_col'>It's Easy with Breeasy</h2>
-				<p id="first_col">As a small business owner, you know how busy your day can be.  We know too, we do it every day.  Breeasy helps us get control of the mountain of emails, calls, prospecting, billing, notes, and appointments.  Everything is now in one place, organized and trackable. And Breeasy can help you, too.  <a href="products/index.html">Take a look at our apps</a>, and we invite you to give them a try and let us know what you think.</p>
-				<a href="#">Invoicing and Billing</a> | <a href="#">Contacts, Calendars, Tasks</a>
+				<p id="first_col">As a small business owner, you know how busy your day can be.  We know too, we do it every day.  Breeasy helps us get control of the mountain of emails, calls, prospecting, billing, notes, and appointments.  Everything is now in one place, organized and trackable. And Breeasy can help you, too.  <a href="http://www.breeasy.com/products">Take a look at our apps</a>, and we invite you to give them a try and let us know what you think.</p>
+				<a href="http://www.breeasy.com/products/breeasy-billing-center">Invoicing and Billing</a> | <a href="http://www.breeasy.com/products/breeasy-for-business">Contacts, Calendars, Tasks</a>
 				</div>
 				<div class="yui-u">
 				 <h2 class='section_header' id='first_col'>Recent Tweets</h2>
