--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../css/breeasy.css">
+	<link rel="canonical" href="http://www.breeasy.com/opportunities" />	
 	</head>
 	<body>
     <div id="doc2"class="yui-t7">
@@ -14,7 +15,7 @@
     	<a href="http://www.breeasy.com"><img src="../images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
     	 	
-    	 	<a href="#">Save 50% on All Breeasy For Business Plans</a>
+    	 	<a href="http://www.breeasy.com/plans">Save 50% on All Breeasy For Business Plans</a>
 
     		</div>
     	</div>
@@ -37,7 +38,7 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="#" >Breeasy.com</a> > Opportunities</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Opportunities</div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g">
@@ -89,7 +90,7 @@
 			<h2>Partner Wanted</h2>
 			<a href="http://sandiego.craigslist.org/csd/bfs/3021133829.html">Social Business Platform Partner Needed</a>
 			<h2>Investment and Equity Available</h2>
-			<p>To help us fund our growth both in North America and internationally, a unique opportunity exists for investment in Breeasy.com.  Please contact <a href="../about.html">Tom O'Brien:</a>  tobrien@bootstraptechnology.com.</p>
+			<p>To help us fund our growth both in North America and internationally, a unique opportunity exists for investment in Breeasy.com.  Please contact <a href="http://www.breeasy.com/about.html">Tom O'Brien:</a>  tobrien@bootstraptechnology.com.</p>
 	    	</div>
 			<br>
 				<div id='ft' class="center">
