--- a/plans/index.html
+++ b/plans/index.html
@@ -7,14 +7,15 @@
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../css/breeasy.css">
+	<link rel="canonical" href="http://www.breeasy.com/plans" />	
 	</head>
 	<body>
     <div id="doc2"class="yui-t7">
     	<div id="app_header">
     	<a href="http://www.breeasy.com"><img src="../images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
-    	 	<a href="#">White Label and Licensing Opportunities</a><br>
-    	 	<a href="#">Affiliates Earn Commissions Now</a>
+    	 	<a href="http://www.breeasy.com/opportunities">White Label and Licensing Opportunities</a><br>
+    	 	<a href="http://www.brze.me">The Breeasy Blog</a>
 
     		</div>
     	</div>
@@ -37,7 +38,7 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="#" >Breeasy.com</a> > Plans and Pricing</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Plans and Pricing</div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g">
