--- a/products/breeasy-for-business/index.html
+++ b/products/breeasy-for-business/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../../css/breeasy.css">
+	<link rel="canonical" href="http://www.breeasy.com/products/breeasy-for-busines" />	
 	</head>
 	<body>
     <div id="doc2"class="yui-t7">
@@ -35,14 +36,14 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="#" >Breeasy.com</a> > <a href="../../products/index.html">Products</a> > Breeasy for Business</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/products/index.html">Products</a> > Breeasy for Business</div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-gd">
 	    		<div class="yui-u first">
 	    		<h1>It's About Connections</h1>
 	    		<p>Running a small business takes all your heart, effort and a ton of time. Managing customers, employees, consultants, accountants, and suppliers can chew up a big chunk of your day.  A part of that you would much rather use prospecting for new clients or spending time with your family and friends. <a href="http://app.breeasy.com">Breeasy for Business</a> helps you get organized and puts all your communications, tasks and to do's all in one place - accessible from any internet connected device:  mobile, desktop, laptop and tablet.</p>
-	    		<p>Breeasy for Business is loaded with a ton of features that get help get your small business organized, efficient and increase profits.  For a limited time Breeasy for Business has an <a href="../../plans/index.html">Early Bird Special</a>.</p>
+	    		<p>Breeasy for Business is loaded with a ton of features that get help get your small business organized, efficient and increase profits.  For a limited time Breeasy for Business has an <a href="http://www.breeasy.com/plans/index.html">Early Bird Special</a>.</p>
 	    		</div>
 	    		<div class="yui-u">
 	    		<img class="hero" src="../../images/social_business_connections.png" alt="Connect, Manage and Grow with Breeasy for Business" title="Don't worry, be happy.  It's Easy with Breeasy!" width="500" height="280" />
@@ -63,8 +64,8 @@
 					events.</td>
 				</tr>
 				<tr>
-				<td><strong>Contacts</strong></td><td>Enter Contacts - prospective, current and past.</td>
-				<td><strong>Companies</strong></td><td>Enter Companies and associate contacts with those companies.</td>
+				<td><strong>Contacts</strong></td><td>Manage Contacts - prospective, current and past.</td>
+				<td><strong>Companies</strong></td><td>Manage Companies and associate contacts with those companies.</td>
 				</tr>
 				<tr>
 				<td><strong>Events</strong></td><td>Add Events such as meetings, lunches, and conferences.  Create re-usable Agendas.</td><td><strong>Locations</strong></td>
