--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -6,13 +6,15 @@
 	<link rel="stylesheet" type="text/css" href="../../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../../css/breeasy.css">
+	<link rel="canonical" href="http://www.breeasy.com/products/breeasy-billing-center" />	
+
 	</head>
 	<body>
     <div id="doc2"class="yui-t7">
     	<div id="app_header">
     	<a href="http://www.breeasy.com"><img src="../../images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
-    	 		<a href="http://billing.breeasy.com/users/sign_up">Invoice and Manage Cash</a>
+    	 		<a href="http://billing.breeasy.com/users/sign_up">Invoice and Manage Cash - Free</a>
     		</div>
     	</div>
 	    <div id='hd'>
@@ -34,7 +36,7 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="#" >Breeasy.com</a> > <a href="../../products/index.html">Products</a> > The Breeasy Billing Center</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/products/index.html">Products</a> > The Breeasy Billing Center</div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-gd">
