--- a/products/index.html
+++ b/products/index.html
@@ -6,14 +6,15 @@
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../css/breeasy.css">
+	<link rel="canonical" href="http://www.breeasy.com/products" />	
 	</head>
 	<body>
     <div id="doc2"class="yui-t7">
     	<div id="app_header">
     	<a href="http://www.breeasy.com"><img src="../images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
-    	 	<a href="#">Bill Clients Free</a><br>
-    	 	<a href="#">Affiliates Earn Commissions Now</a>
+    	 	<a href="http://billing.breeasy.com">Bill Clients Free</a><br>
+    	 	<a href="http://app.breeasy.com">Get Things Done - Save Time and Money</a>
 
     		</div>
     	</div>
@@ -36,13 +37,13 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="#" >Breeasy.com</a> > Products</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Products</div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g">
 	    		<div class="yui-u first">
 	    			<h1>Breeasy for Business</h1>
-	    			<p><a href="breeasy-for-business/index.html">Breeasy for Business</a> - BFB - is our flagship app that keeps you organized, efficient and productive.  Simple and easy to use, from the first day, you will notice the improvements in your day-to-day work flow.  Some things it can do are:</p>
+	    			<p><a href="http://www.breeasy.com/products/breeasy-for-business/index.html">Breeasy for Business</a> - BFB - is our flagship app that keeps you organized, efficient and productive.  Simple and easy to use, from the first day, you will notice the improvements in your day-to-day work flow.  Some things it can do are:</p>
 	    			<ul class="features">
 	    			<li>Manage Customers and Suppliers</li>
 	    			<li>CRM - Customer Relationship Management</li>
@@ -56,18 +57,18 @@
 	    			<li>Reporting</li>
 	    			<li>And More....</li>
 					</ul>
-					<p>See a complete list of BFB features and how each one can <a href="breeasy-for-business/index.html">save you time and money</a>.<br>  Of course, sometime the best way to learn a new app is to give it try with our <a href="http://app.breeasy.com/signup">Risk-Free Trial</a>.</p>
+					<p>See a complete list of BFB features and how each one can <a href="http://www.breeasy.com/products/breeasy-for-business">save you time and money</a>.<br>  Of course, sometime the best way to learn a new app is to give it try with our <a href="http://app.breeasy.com/signup">Risk-Free Trial</a>.</p>
 				</div>
 	    		<div class="yui-u">
 	    			<h1>Breeasy Billing Center</h1>
-	    			<p>Sometimes, you just need to get an invoice or a bill immediately to your client, without any hassle.  That's where <a href="breeasy-billing-center/index.html">The Breeasy Billing Center</a> can help.  Cloud based, free, and super simple, you can create invoices, record payments and keep track of your cash.</p>
+	    			<p>Sometimes, you just need to get an invoice or a bill immediately to your client, without any hassle.  That's where <a href="http://www.breeasy.com/products/breeasy-billing-center/index.html">The Breeasy Billing Center</a> can help.  Cloud based, free, and super simple, you can create invoices, record payments and keep track of your cash.</p>
 	    			<ul class="features">
 	    			<li>Create and Email Invoices on the Fly</li>
 	    			<li>Manage Accounts Receivables</li>
 	    			<li>Accounts Receivable Aging</li>
 	    			<li>Past Due Reports</li>
 					</ul>
-					<p>Not ready for all that Breeasy for Business can do for you?  The Breeasy Billing Center is a great way to give us a try <a href="http://billing.breeasy.com">Free, Forever</a>.<br>   You can read more about <a href="breeasy-billing-center/index.html">Invoicing, Billing and Cash Management</a>.</p>
+					<p>Not ready for all that Breeasy for Business can do for you?  The Breeasy Billing Center is a great way to give us a try <a href="http://billing.breeasy.com">Free, Forever</a>.<br>   You can read more about <a href="http://www.breeasy.com/products/breeasy-billing-center">Invoicing, Billing and Cash Management</a>.</p>
 		
 	    		</div>
 			</div>
