adding BFB features and fixed a few typos

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<li><a href="opportunities/index.html">Opportunities</a></li>
 					<li><a href="about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
+					<li><a href="products/login-links.html">Login</a></li>
 
 					
 					<li class="last"></li>
