--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -28,6 +28,7 @@
 					<li><a href="../../opportunities/index.html">Opportunities</a></li>
 					<li><a href="../../about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
+					<li><a href="../../products/login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="../../images/feed-24x24.png" alt="rss" width="24" height="24" /></a>
@@ -43,7 +44,6 @@
 	    		<div class="yui-u first">
 	    		<h1>Get Paid Faster!</h1>
 	    		<p>As a small business owner, you know that cash is the fuel that makes your business hum.  But you don't always have time to create an invoice or bill your customers quickly, efficiently and accurately.  Now, with the <a href="http://billing.breeasy.com">Breeasy Billing Center</a>, you don't have to wait.  You can Create invoices, Record payments, Run reports, and Manage your most important asset:  Cash. Speaking of which, The Breeasy Billing Center is totally free!</p>
-	    		<p></p>
 	    		</div>
 	    		<div class="yui-u">
 	    		<img class="hero" src="../../images/happy_small_business_man.png" alt="Free Invoicing App" title="Cash is King, get on top of yours" width="380" height="254" />
