--- a/products/breeasy-for-business/index.html
+++ b/products/breeasy-for-business/index.html
@@ -28,6 +28,7 @@
 					<li><a href="../../opportunities/index.html">Opportunities</a></li>
 					<li><a href="../../about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
+					<li><a href="../../products/login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="../../images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog"title="Subcribe to The Breeasy Blog" /></a>
@@ -58,6 +59,10 @@
 				</tr>
 			</thead>
 			<tbody>
+					<tr>
+					<td><strong>Dashboard</strong></td><td>Your most recent tasks, to dos and contacts all in one place.</td>
+					<td><strong>Users</strong></td><td>Add your employees, consultants, and collegues.</td>
+				</tr>
 				<tr>
 					<td><strong>To Dos</strong></td><td>Create a never ending To Do list.  Assign and organize by priority.</td>
 					<td><strong>Tasks</strong></td><td>Create a task and assign it to an employee or a contact.  Then create follow-up tasks or
@@ -72,7 +77,7 @@
 				<td>Enter frequent Locations and create events quickly and easily.</td>
 				</tr>
 				<tr>
-				<td><strong>CSIs</strong></td><td>Manage customer issues with a Customer Service Incident.  Assign to a colleague, and track
+				<td><strong><a href="features/customer-service-incident.html">CSIs</a></strong></td><td>Manage customer issues with a Customer Service Incident.  Assign to a colleague, and track
 				resolutions.</td>
 				<td><strong>Reminders</strong></td><td>Never forget - task, event and do do Reminders all in your inbox.</td>
 				</tr>
@@ -92,7 +97,7 @@
 				<td><strong>Files</strong></td><td>Upload Files and link them to contacts, users, projects, and companies.</td>
 				</tr>
 				<tr><td><strong>Reports</strong></td><td>View Reports of your and your employees activities.</td>
-				<td><strong>Support Form</strong></td><td>Find answers to your questions or post a question.</td>
+				<td><strong>Support Forum</strong></td><td>Find answers to your questions or post a question.</td>
 				</tr>
 				<tr>
 				<td><strong>Notes</strong></td><td>Attach Notes to contacts, events, projects, companies.</td>
@@ -110,6 +115,10 @@
 				<tr>
 				<td><strong>Don't Repeat Yourself</strong></td><td>Copy previous events, tasks, lists, agendas and to dos.</td>
 				<td><strong>Suppliers</strong></td><td>Keep track of consultants, accountants, lawyers, too!</td>
+				</tr>
+				<tr>
+				<td><strong>Account</strong></td><td>Your company - the top of the BfB food chain.</td>
+				<td><strong></strong></td><td></td>
 				</tr>
 			</tbody>
 			</table>
