--- a/products/index.html
+++ b/products/index.html
@@ -29,6 +29,7 @@
 					<li><a href="../opportunities/index.html">Opportunities</a></li>
 					<li><a href="../about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
+					<li><a href="login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="../images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
@@ -43,7 +44,7 @@
 			<div class="yui-g">
 	    		<div class="yui-u first">
 	    			<h1>Breeasy for Business</h1>
-	    			<p><a href="http://www.breeasy.com/products/breeasy-for-business/index.html">Breeasy for Business</a> - BFB - is our flagship app that keeps you organized, efficient and productive.  Simple and easy to use, from the first day, you will notice the improvements in your day-to-day work flow.  Some things it can do are:</p>
+	    			<p><a href="http://www.breeasy.com/products/breeasy-for-business/index.html">Breeasy for Business</a> - BFB - is our flagship app that keeps you organized, efficient and productive.  Simple and easy to use, you will notice improvements in your day-to-day work flow in no time.  Some things it can do for you are:</p>
 	    			<ul class="features">
 	    			<li>Manage Customers and Suppliers</li>
 	    			<li>CRM - Customer Relationship Management</li>
