a few tweeks then pushed the CSI feature to the live site

--- a/plans/index.html
+++ b/plans/index.html
@@ -42,7 +42,7 @@
 			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Plans and Pricing</div>
 		</div> <!-- hd -->
 		<div id='bd'>
-			<div class="yui-g">
+			<div class="yui-g"> <!-- 50/50 % split -->
 			<h1>Breeasy for Business</h1>
 	    		<div class="yui-u first">
 	    			<p>There are two plans available:  Standard and Deluxe.  Standard should be perfect for most small businesses, while Deluxe is suitable for larger companies and includes priority support*.</p>
